--- a/package.xml
+++ b/package.xml
@@ -15,17 +15,20 @@
   <build_depend>topic_tools</build_depend>
   <build_depend>boost</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>actionlib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
   <run_depend>nodelet</run_depend>
   <run_depend>rosbag_storage</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>topic_tools</run_depend>
   <run_depend>boost</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>actionlib</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
+  <run_depend>message_generation</run_depend>
 
-
-  <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
-
+    <nodelet plugin="${prefix}/nodelet_rosbag.xml"/>
   </export>
 </package>
